2006-05-16  Bruno Haible  <bruno@clisp.org>

	* localcharset.c [CYGWIN]: Include <windows.h>.
	(get_charset_aliases): For Cygwin, return the same CPxxx aliases list
	as under WIN32.
	(locale_charset) [CYGWIN]: Try to retrieve the encoding from the
	environment variables. Fall back to GetACP().

2006-05-16  Bruno Haible  <bruno@clisp.org>

	* javacomp.c (is_envjavac_gcj_14_14_usable,
	is_envjavac_gcj_14_13_usable, is_envjavac_nongcj_usable,
	is_gcj_present, is_gcj_14_14_usable, is_gcj_14_13_usable,
	is_javac_usable): Remove unused variable.

2006-05-15  Bruno Haible  <bruno@clisp.org>

	* Makefile.am: Test flag WOE32DLL instead of CYGWINDLL.

2006-04-30  Bruno Haible  <bruno@clisp.org>

	* progreloc.c: Include <mach-o/dyld.h> if available.
	(find_executable): Use _NSGetExecutablePath when possible.

2006-05-12  Bruno Haible  <bruno@clisp.org>

	* mkdtemp.c [MINGW]: Include <io.h>.
	(mkdir): Define using _mkdir.

2006-05-11  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (libgettextlib_la_SOURCES, libgettextlib_la_LDFLAGS):
	Modify for Cygwin.

2006-05-09  Bruno Haible  <bruno@clisp.org>

	* xvasprintf.c (xstrcat): Handle overflow. Suggested by Paul Eggert.
	Optimize away a va_copy call. Suggested by Eric Blake. Add missing
	va_end call.

2006-05-06  Charles Wilson  <cygwin@cwilson.fastmail.fm>

	* progreloc.c (maybe_executable) [CYGWIN]: Use the access() function.

2006-04-30  Bruno Haible  <bruno@clisp.org>

	* javacomp.h (compile_java_class): Add source_version, target_version
	arguments.
	* javacomp.c: Rewritten to choose only a compiler that respects the
	specified source_version and target_version.

2006-04-30  Bruno Haible  <bruno@clisp.org>

	* xvasprintf.c: Include limits.h, string.h, xsize.h.
	(EOVERFLOW): Define fallback value.
	(xstrcat): New function.
	(xvasprintf): Recognize the special case of a string concatenation.

2006-03-13  Bruno Haible  <bruno@clisp.org>

	* javaversion.h: New file.
	* javaversion.c: New file.
	* javaversion.java: New file.