@@ -1,5 +1,5 @@
 /* Execute a Java program.
-   Copyright (C) 2001-2003 Free Software Foundation, Inc.
+   Copyright (C) 2001-2003, 2006 Free Software Foundation, Inc.
    Written by Bruno Haible <haible@clisp.cons.org>, 2001.
 
    This program is free software; you can redistribute it and/or modify
@@ -360,8 +360,8 @@ execute_java_class (const char *class_name,
       }
   }
 
-#if defined _WIN32 || defined __WIN32__
-  /* Win32 */
+#if defined _WIN32 || defined __WIN32__ || defined __CYGWIN__
+  /* Win32, Cygwin */
   {
     static bool jview_tested;
     static bool jview_present;
