@@ -1,3 +1,8 @@
+2006-05-17  Bruno Haible  <bruno@clisp.org>
+
+	Cygwin portability.
+	* hostname.c (WIN32_NATIVE): Renamed from WIN32.
+
 2006-05-16  Bruno Haible  <bruno@clisp.org>
 
 	* Makefile.am (CLEANFILES): Add gettext-po.h.
